--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,9 +1,10 @@
 <resources>
     <string name="app_name">RootBeer Sample</string>
 
-    <string name="action_settings">Settings</string>
+    <string name="run_checks">Run checks</string>
     <string name="action_github">Get on GitHub</string>
-    <string name="action_info">info</string>
+    <string name="action_info">Info</string>
+    <string name="action_more_info">More Info</string>
     <string name="info_details">This is a sample app for RootBeer - a simple to use root checking Android library. Rootbeer gives an indication of root. Remember root==god, so there\'s no 100% way to check for root.</string>
 
     <string name="result_rooted">ROOTED*</string>
@@ -19,5 +20,6 @@
     <string name="root_checks_8">Dangerous Props</string>
     <string name="root_checks_9">Root Native</string>
     <string name="root_checks_10">Root Cloaking Apps</string>
-    <string name="root_checks_11">Selinux Flag Enabled (experimental)</string>
+    <string name="root_checks_11">Magisk specific checks</string>
+    <string name="root_checks_12">Magisk UDS (experimental)</string>
 </resources>
